Card Module Alignment issue done

--- a/src/modules/u4m-cards.module/module.scss
+++ b/src/modules/u4m-cards.module/module.scss
@@ -85,7 +85,7 @@
     margin: 0 -20px;
     margin: 0 -40px;
     row-gap: 50px;
-
+    justify-content: center;
     .items {
       padding: 0 40px;
     }
